--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Editing</title>
-    <link rel="stylesheet" href="../css/demo.css">
+    <link rel="stylesheet" href="./demo.css">
 
 </head>
 <body>
@@ -14,7 +14,7 @@
         </div>
 
         <div class="center">    
-            <video src="../img/intro.mp4" controls></video>
+            <video src="./intro.mp4" controls></video>
         </div>
     </div>
 
@@ -23,15 +23,15 @@
     </div>
     <div class="block">
         <div class="samples">
-            <video src="../img/i know.mp4" class="iknow" controls></video>
-            <video src="../img/THE BATMAN.mp4" class="batman" controls></video>
+            <video src="../i know.mp4" class="iknow" controls></video>
+            <video src="./THE BATMAN.mp4" class="batman" controls></video>
         </div>
    
     </div>
     <div class="social">
-        <a href="https://www.facebook.com/profile.php?id=100092055781046" ><img src="../img/facebook.png" alt="" class="facebook"></a>
-        <a href="https://www.instagram.com/navadeepbommarapu/" ><img src="../img/instagram-6338392_1280.webp" alt="instagram" class="instagram"></a>
-        <a href="https://twitter.com/Navadeeppppp"><img src="../img/twitter-icon.webp" alt="" class="twitter"></a>
+        <a href="https://www.facebook.com/profile.php?id=100092055781046" ><img src="./facebook.png" alt="" class="facebook"></a>
+        <a href="https://www.instagram.com/navadeepbommarapu/" ><img src="./instagram-6338392_1280.webp" alt="instagram" class="instagram"></a>
+        <a href="https://twitter.com/Navadeeppppp"><img src="./twitter-icon.webp" alt="" class="twitter"></a>
     </div>
 </body>
 </html>
